# Optimizing-Convolution-with-NEON-Intrinsics

./: .gitmodules  CMakeLists.txt  run.sh
conv/: conv_layer.hpp
include/: convolution.hpp  convolution_neon.hpp
src/: main.cpp  test_neon.cpp  test_sse.cpp
tests/: test_conv_layer.cpp
